--- a/app/src/main/res/layout/fragment_mascota.xml
+++ b/app/src/main/res/layout/fragment_mascota.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:background="@color/background_color"
     android:layout_height="match_parent">
+    <FrameLayout
+        android:id="@+id/cont_fragment_mascota"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     <LinearLayout
         android:background="@color/background_color"
         android:layout_width="match_parent"
