--- a/app/src/main/res/layout/ventas_fragment.xml
+++ b/app/src/main/res/layout/ventas_fragment.xml
@@ -8,10 +8,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <GridView
+        <ListView
+            android:id="@+id/listProductos"
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></GridView>
+            android:layout_height="match_parent"></ListView>
         <Button
             android:id="@+id/btnAddProducto"
             android:layout_width="match_parent"
