--- a/app/src/main/res/layout/add_pieza_producto_fragment.xml
+++ b/app/src/main/res/layout/add_pieza_producto_fragment.xml
@@ -135,20 +135,13 @@
                 android:orientation="horizontal">
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btnGuardar"
+                    android:id="@+id/btnAgregar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_weight="1"
-                    android:text="Guardar" />
+                    android:text="Agregar" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btnEditar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_weight="1"
-                    android:text="Editar" />
             </LinearLayout>
 
         </LinearLayout>
