--- a/app/src/main/res/layout/item_menu_inventario.xml
+++ b/app/src/main/res/layout/item_menu_inventario.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="vertical"
-        android:layout_margin="5dp"
+        android:padding="5dp"
         tools:ignore="MissingConstraints">
 
         <androidx.cardview.widget.CardView
